// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Digitblock should render with digit, label and separator 1`] = `
<div>
  <div
    class="flex w-24 flex-col"
  >
    <div
      class="flex h-8 items-center justify-center text-lg font-thin uppercase"
    >
      my label
    </div>
    <div
      data-testid="digit"
    />
  </div>
  <div
    data-testid="separator"
  />
</div>
`;

exports[`Digitblock should render without separator 1`] = `
<div>
  <div
    class="flex w-24 flex-col"
  >
    <div
      class="flex h-8 items-center justify-center text-lg font-thin uppercase"
    >
      my label
    </div>
    <div
      data-testid="digit"
    />
  </div>
</div>
`;
